--- a/main.css
+++ b/main.css
@@ -539,7 +539,7 @@ body.scroll-lock {
     border-radius: 10px;
     padding: 2rem;
     box-shadow: var(--card-shadow);
-    transition: transform 0.3s ease;
+    transition: var(--transition);
     backdrop-filter: blur(15px);
     border: 1px solid rgba(255, 255, 255, 0.1);
 }
@@ -633,7 +633,7 @@ body.scroll-lock {
     padding: 2rem;
     border-radius: 10px;
     box-shadow: var(--card-shadow);
-    transition: transform 0.3s ease;
+    transition: var(--transition);
     backdrop-filter: blur(15px);
     border: 1px solid rgba(255, 255, 255, 0.1);
 }
@@ -764,7 +764,7 @@ footer span {
     flex-direction: column;
     overflow: hidden;
     transform: scale(0.95);
-    transition: transform 0.3s ease;
+    transition: var(--transition);
 }
 
 .modal.active .modal-content {
